# HydroponicsStatTracker

./: .gitignore  README.md  install-dependencies.sh  manage.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
HydroTracker/: asgi.py  settings.py  urls.py  wsgi.py
HydroTracker/CustomAuth/: apps.py
HydroTracker/CustomAuth/migrations/: 0001_initial.py
HydroTracker/StatLogging/: admin.py  apps.py  models.py
HydroTracker/StatLogging/migrations/: 0001_initial.py  0002_alter_dosingguide_stage_of_growth_alter_grow_stage.py
