[tool.poetry]
name = "hydroponicsstattracker"
version = "0.1.0"
description = ""
authors = ["Chris Becak <chrisbecak49@gmail.com>"]
packages = [{include = "HydroTracker"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
django-extensions = "^3.2.3"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
